--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,40 @@ six==1.17.0
 sqlparse==0.5.3
 threadpoolctl==3.6.0
 tzdata==2025.2
+certifi==2025.8.3
+charset-normalizer==3.4.3
+cmdstanpy==1.2.5
+colorama==0.4.6
+contourpy==1.3.3
+cycler==0.12.1
+filelock==3.19.1
+fonttools==4.60.0
+fsspec==2025.9.0
+holidays==0.81
+huggingface-hub==0.35.0
+idna==3.10
+importlib_resources==6.5.2
+Jinja2==3.1.6
+kiwisolver==1.4.9
+MarkupSafe==3.0.2
+matplotlib==3.10.6
+mpmath==1.3.0
+networkx==3.5
+packaging==25.0
+pillow==11.3.0
+prophet==1.1.7
+pyparsing==3.2.5
+PyYAML==6.0.2
+regex==2025.9.18
+requests==2.32.5
+safetensors==0.6.2
+sentence-transformers==5.1.1
+setuptools==80.9.0
+stanio==0.5.1
+sympy==1.14.0
+tokenizers==0.22.1
+torch==2.8.0
+tqdm==4.67.1
+transformers==4.56.2
+typing_extensions==4.15.0
+urllib3==2.5.0
